# api_server_for_mobile_app

./: .env  Cargo.toml  Dockerfile  ReadMe.txt
migrations/2021-06-01-080315_isplsvr/: up.sql
src/: json_function.rs  json_struct.rs  main.rs  models.rs  schema.rs  test.rs
