[package]
name = "mobile_api"
version = "0.1.0"
authors = ["tonyl <tonylee3737@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1.5.0"
serde = "1.0"
#we will be using the dotenv crate to read out .env file and place it in the environment as environment variables.
dotenv = "0.15.0"
#we will also include diesel proper now. for diesel we want to specify that we are using db(mysql || postgres .. )  so we include it via the features option
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2", "numeric", "64-column-tables"] }
#Adding Sessions
actix-identity = "0.3.1"
#Timestamps we will use the chrono crate and will also add in the feature for serde so we can use serialize and deserialize with chrono.
# we will also need to let diesel know about it. we will need to enable the chrono feature in diesel.
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
log = "0.4.0"
log4rs = "1.0.0"
json ="0.12"
awmp = { version = "0.6", default-features = true }
actix-multipart = "0.3.0"
futures-util = "0.3.16"
sanitize-filename = "0.3.0"
actix-files = "0.5.0"
reqwest = { version =  "0.11.3", features = ["blocking", "json", "multipart"] }
